# wizards-workshop

./: README_WINDOWS.md  pyproject.toml  test_game.py
src/wizards_workshop/: card.py  card_generator.py  environment.py  game_manager.py  main.py  playmat.py  recipe_display.py  recipes.py  verb.py
